--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       <div class="btn right-btn"></div>
     </div>
     <div class="icons">
-      <div class="icon highlighted fish-icon"></div>
+      <div class="icon fish-icon"></div>
       <div class="icon poop-icon"></div>
       <div class="icon weather-icon"></div>
     </div>
